objects/ltcomm__Learning_Order__c.object
<CustomObject>
    <fields>
        <fullName>ltcomm__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ltcomm__Coupon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coupon</label>
        <referenceTo>ltcomm__Coupon__c</referenceTo>
        <relationshipLabel>Coupon Usage</relationshipLabel>
        <relationshipName>Learning_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ltcomm__Date_and_Time__c</fullName>
        <label>Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ltcomm__Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ltcomm__Purchased_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchased By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Learning_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ltcomm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Refunded</fullName>
                </value>
                <value>
                    <fullName>Held for Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Learning Order</label>
    <listViews>
        <fullName>ltcomm__All</fullName>
        <columns>NAME</columns>
        <columns>ltcomm__Coupon__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ltcomm__Purchased_By__c</columns>
        <columns>ltcomm__Status__c</columns>
        <columns>ltcomm__Date_and_Time__c</columns>
        <columns>ltcomm__Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LRDR-{000000}</displayFormat>
        <label>Learning Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>